--- a/shopapp/static/shopapp/css/shopapp.css
+++ b/shopapp/static/shopapp/css/shopapp.css
@@ -1,6 +1,6 @@
 /*!!!!!!!!!!!!!!!!! HEADER !!!!!!!!!!!!!!!!!*/
 
-.header{
+.header {
     z-index: 10;
     width: 100%;
     height: 100px;
@@ -8,23 +8,24 @@
     background-color: var(--color-bg-header);  
     transition: background-color 0.3s ease;
 }
-.header__container{
+.header-container {
     height: 100%;
     display: flex;
     position: relative;
     justify-content: flex-end;
     align-items: center;
 }
-.header-logo__link{
+.header-logo {
     z-index: 10;
     margin-right: auto;
 }
-.header-logo{
+.header-logo img{
     width: 70px;
     transition: filter 0.4s ease;
-}
-.header-logo:hover{
-    filter: drop-shadow(0px 0px 30px #622C8E);
+
+    &:hover{
+        filter: drop-shadow(0px 0px 30px #622C8E);
+    }
 }
 .header__row {
     position: relative;
@@ -36,11 +37,11 @@
     margin: 0px 35px;
 }
 
-.header__item {
+.header-name {
     position: relative;
     font-family: "Montserrat";
 }
-.header__item:before {
+.header-name:before {
     content: "";
     position: absolute;
     bottom: -1px;
@@ -49,23 +50,19 @@
     border-top: 1px solid #C603D7;
     transition: width 0.3s ease;
 }
-.header__item-l p:before {
-    content:"";
-    bottom: -2px;
-}
-.header__item-l{
+.header__item {
     position: relative;
     display: flex;
-    justify-content: center;
     align-items: center;
 }
-.header__item-l img {
+.header__item img {
     margin-right: 2px;
     width: 25px;
 }
-.header__item-l:hover p:before{
+.header__item:hover p:before{
     width: 100%;
 }
+
 .header-search__container {
     display: flex;
     position: relative;
@@ -101,27 +98,27 @@
     height: 90%;
     object-fit: contain;
 }
-.header-button{
+.header-button {
     font-family: "Montserrat";
     padding: 10px 45px;
-    color: #C603D7;
     background-color: transparent;
     border: 1.5px solid transparent;
     border-radius: 10px;
-    transition: border-color 0.3s ease-out;
+    transition: border-color 0.3s ease;
+    
+    &:hover{
+        border-color: #C603D7;
+    }
 }
-.header-button:hover{
-    border-color: #C603D7;
-}
-.header-menu{
+.header-menu {
     height: 60%;
     margin: 0 0 0 5%;
     cursor: pointer;
     z-index: 10;
     transition: filter 0.3s ease;
-}
-.header-menu:hover{
-    filter: brightness(1.2);
+    &:hover{
+        filter: brightness(1.2);
+    }
 }
 
 @media (max-width:820px){
@@ -137,10 +134,10 @@
 
 /*!!!!!!!!!!!!!!!!!  CATALOG  !!!!!!!!!!!!!!!!!*/
 
-.catalog-menu-container{
+.catalog-menu-container {
+    position: absolute;
     width: 100%;
     height: 80%;
-    position: absolute;
     top: 80px;
     left: 0;
     right: calc(-1 * (100vw - 100%));
@@ -151,175 +148,197 @@
     visibility: hidden;
     transition: opacity 0.4s ease, visibility 0.4s ease;
 }
-
-.catalog-menu{
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    background-color: var(--color-bg-header);
-    height: 100%;
-    padding: 20px;
-}
-.catalog-menu-container.active{
+.catalog-menu-container.active {
     opacity: 1;
     visibility: visible;
 }
-.catalog-menu__item {
+.catalog-menu-wrapper {
     position: relative;
-    width: 20%;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    background-color: var(--color-bg-header);
+
+}
+.catalog-menu {
+    width: 18%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+.catalog-menu__category {
+    display: block;
+    position: relative;
     padding: 15px 0 15px 10px;
     border: 2px solid transparent;
     border-bottom: 2px solid #c503d780;
     transition: border 0.2s ease;
 }
-.catalog-menu__item:hover {
+.catalog-menu__category.active {
     border: 2px solid #C603D7;
 }
-
+.catalog-menu-subcategories {
+    position: relative;
+    display: none;
+    height: 100%;
+    margin-left: 50px;
+    padding: 15px 0 0 0;
+}
+.catalog-menu__subcategory {
+    display: inline-flex;
+    align-items: center;
+    position: relative;
+}
+.catalog-menu__subcategory img {
+    width: 40px;
+    margin-right: 5px;
+}
+.subsubcategory-title {
+    font-weight: 800; 
+    font-size: 22px; 
+    color: #6D32BA;   
+}
 /*!!!!!!!!!!!!!!!!!  /CATALOG  !!!!!!!!!!!!!!!!!*/
 
 /*!!!!!!!!!!!!!!!!! MAIN !!!!!!!!!!!!!!!!!*/
 
-.main{
-    margin: 100px 0 0 0;
+.main-container {
+    margin-top: 100px;
     display: flex;
     position: relative;
 }
-.main img{
+.main-title {
+    display: flex;
+    width: 100%;
+    color: #c600d8;
+    flex-direction: column;
+}
+.main-container img {
     width: 450px;
     z-index: -1;
     margin-left: auto;
     border-radius: 45px 100px 45px 100px; 
-    box-shadow: 0px 0px 394px #400077, 0px 0px 225px #400077, 0px 0px 200px #400077;
 }
-.main-button__div{
+.main-button-wrapper {
     position: absolute;
     bottom: 0;
     left: 0;
+    bottom: 15px;
 }
-.main-button{
+.main-button {
     position: relative;
     overflow: hidden;
     background-color: #90069C;
     width: 212px;
     height: 85px;
-    font-family: "Inter";
     color: #FFFFFF;
     font-size: 32px;
     font-weight: 700;
     border-radius: 27px;
     transition: box-shadow 0.4s ease-out, background-color 0.4s ease-out, width 0.4s ease-out;
-}
-.main-button:after{
-    content: "";
-    background-image: url('/static/shopapp/img/main/shopping-cart.png');
-    background-size: cover;
-    width: 50px;
-    height: 50px;
-    position: absolute;
-    top: 17px;
-    right: -60px;
-    transition: right 0.4s ease-out;
-}
-.main-button:hover{
-    content: "";
-    width: 230px;
-    background-color: #B202C1;
-    box-shadow: 0 0 34px #B202C1, 0 0 20px #B202C1, 0 0 10px #B202C1;
-}
-.main-button:hover:after{
-    content: "";
-	right: 10px; 
-}
-@media (max-width:1549px){
-    .main img{
-        width: 400px;
+
+    &:after {
+        content: "";
+        background-image: url('/static/shopapp/img/main/shopping-cart.png');
+        background-size: cover;
+        width: 50px;
+        height: 50px;
+        position: absolute;
+        top: 17px;
+        right: -60px;
+        transition: right 0.4s ease-out;
     }
-    .title{
-        font-size: 110px;
-        
-    }   
-    .main-button__div{
-        margin: 400px 0 0 0;
-    } 
-}
-@media (max-width:1055px){
-    .main img{
-        width: 300px;
+    &:hover {
+        content: "";
+        width: 230px;
+        background-color: #B202C1;
+        box-shadow: 0 0 34px #B202C1, 0 0 20px #B202C1;
     }
-    .title{
-        font-size: 85px;
-    }    
-    .main-button__div{
-        margin: 300px 0 0 0;
-    } 
-    .main-button{
-        width: 170px;
-        height: 65px;
-        font-size: 24px;
-    }
-}
-@media (max-width:820px){
-    .main img{
-        width: 250px;
-    }
-    .title{
-        font-size: 55px;
-    }    
-}
-@media (max-width:720px){
-    .main img{
-        display: none;
+    &:hover:after {
+        content: "";
+        right: 10px; 
     }
 }
 
 /*!!!!!!!!!!!!!!!!! /MAIN !!!!!!!!!!!!!!!!!*/
 
+/*!!!!!!!!!!!!!!!!! CONFIGURATOR !!!!!!!!!!!!!!!!!*/
+
+.configurator {
+    margin-top: 100px;
+    background-color: var(--color-bg-header);
+    border-top: 1px solid #C603D7;
+    border-bottom: 1px solid #C603D7;
+    padding: 50px 0;
+}
+.configurator-container {
+    display: flex;
+    justify-content: space-between;
+}
+.configurator-img {
+    width: 35%;
+    border-radius: 45px 125px 45px 125px; 
+}
+.configurator-info {
+    margin-left: 20px;
+}
+.configurator-info p {
+    width: 100%;
+    font-size: 64px;
+}
+.configurator-info .configurator-title {
+    margin-top: 40px;
+    font-size: 46px;
+}
+.configurator-title-a span {
+    padding: 3px 10px;
+    border: 2px solid #c096ff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px #c096ff, 0 0 10px #9747FF;
+    color: #9747FF;
+    margin-right: 5px;
+}
+.configurator-title {
+    text-shadow: 0 0 15px #C603D7;
+}
+.configurator-title-a img {
+    width: 10%;
+}
+/*!!!!!!!!!!!!!!!!! /CONFIGURATOR !!!!!!!!!!!!!!!!!*/
+
 /*!!!!!!!!!!!!!!!!! ABOUT US !!!!!!!!!!!!!!!!!*/
 
-.about-us{
-    margin: 150px 0 0 0;
+.about-us {
+    margin-top: 150px;
 }
-.about-us__title{
+.about-us__title {
     width: 100%;
     font-size: 96px;
     text-align: center;
 }
 .about-us__text{
     padding: 30px 0px;
-    font-family: "Inter";
-    font-weight: 700;
     font-size: 30px;
-    color: #9747FF;
     line-height: 150%;
     text-align: center;
-}
-.about-us__title2{
-    margin: 50px 0 20px 0;
-    font-size: 66px;
 }
 .providings{
     margin: 0px 20px;
     display: flex;
     justify-content: space-between;
 }
-.providings div{
-    position: relative;
-    overflow: hidden;
-}
 .providings div img{
     display: block;
     margin: 5px auto;
 }
-.providings .provide-subtitle{
-    margin: 5px 0;
-}
+
 
 /*!!!!!!!!!!!!!!!!! /ABOUT US !!!!!!!!!!!!!!!!!*/
 
 /*!!!!!!!!!!!!!!!!!  MENU !!!!!!!!!!!!!!!!!*/
 
-.burger-menu__container{
+.burger-menu__container {
     min-width: 30%;
     height: 100%;
     position: absolute;
@@ -329,44 +348,49 @@
     background-color: var(--color-bg);
     transition: background-color 0.3s ease, right 0.7s ease;
 }
-.burger-menu{
+.burger-menu {
     display: flex;
     position: relative;
     width: 100%;
     height: 100%;
 }
-.burger-menu__close{
+.burger-menu__close {
     position: absolute;
     top: 20px;
     right: 10px;
     width: 60px;
     height: 60px;
     cursor: pointer;
+    
+    &:before, &:after{
+        content: "";
+        position: absolute;
+        top:50%;
+        right: 0;
+        width: 100%;
+        height: 4px;
+        background: #C603D7;
+    }
+    &:before {
+        transform: rotate(45deg);
+    }
+    &:after {
+        transform: rotate(-45deg);
+    }
 }
-.burger-menu__close:before, .burger-menu__close:after{
-    content: "";
-    position: absolute;
-    top:50%;
-    right: 0;
-    width: 100%;
-    height: 4px;
-    background: #C603D7;
-}
-div:after {transform: rotate(45deg);}
-div:before {transform: rotate(-45deg);}
 
-.burger-menu__container.active{
+.burger-menu__container.active {
     right: 0;
 }
-.burger-menu__item{
+.burger-menu__item {
     font-size: 24px;
 }
-.burger-menu__theme{
+.burger-menu__theme {
     width: 100%;
     height: 140px;
     margin: 120px 0 0 0;
 }
-.burger-menu__theme p{
+.burger-menu__theme p {
     font-size: 24px;
     padding: 0;
     margin: 0 auto;
@@ -375,9 +399,8 @@ div:before {transform: rotate(-45deg);}
     display: block;
     width: 100%;
     height: 100%;
-
 }
-.burger-menu__theme-container{
+.burger-menu__theme-container {
     display: flex;
     position: relative;
     width: 250px;
@@ -387,12 +410,12 @@ div:before {transform: rotate(-45deg);}
     border: 3px solid var(--color-theme-border);
     transition: background-color 0.3s ease;
 } 
-.burger-menu__theme-dark, .burger-menu__theme-light{
+.burger-menu__theme-dark, .burger-menu__theme-light {
     width: 50%;
     background-color: #0D0316;
     border-radius: 8px 0 0 8px;
 }
-.burger-menu__theme-light{
+.burger-menu__theme-light {
     border-radius: 0 8px 8px 0;
     background-color: #D8BAFF;
 }
@@ -408,52 +431,52 @@ div:before {transform: rotate(-45deg);}
     visibility: hidden;
     opacity: 0;
     transition: opacity 0.3s ease, visibility 0.3s ease;
-  }
-.blackout.active{
+}
+.blackout.active {
     visibility: visible;
     opacity: 1;
 }
 
-.burger-menu__header{
+.burger-menu__header {
     display: none;
 }
-@media (max-width:1024px){
+@media (max-width:1024px) {
     .burger-menu__container{
         width: 50%;
     }
 }
-@media (max-width:820px){
-    .burger-menu__header{
+@media (max-width:820px) {
+    .burger-menu__header {
         display: block;
         position: absolute;
         top: 0;
         left: 20%;
         margin: 130px 0 0 0;
     }
-    .burger-menu__header li{
+    .burger-menu__header li {
         display: inline-block;
         position: relative;
         font-size: 24px;
         margin-bottom: 20px;
     }
-    .burger-menu__theme{
+    .burger-menu__theme {
         align-self: flex-end;
         margin: 0 0 150px 0;
         
     }
-    .burger-menu__theme-container{
+    .burger-menu__theme-container {
         width: 200px;
     }
 }
 
-@media (max-width:450px){
-    .burger-menu__theme-container{
+@media (max-width:450px) {
+    .burger-menu__theme-container {
         width: 130px;
     }
-    .burger-menu__theme p{
+    .burger-menu__theme p {
         font-size: 18px;
     }  
-    .burger-menu__close{
+    .burger-menu__close {
         width: 50px;
         height: 50px;
     }
@@ -461,24 +484,23 @@ div:before {transform: rotate(-45deg);}
 /*!!!!!!!!!!!!!!!!!  /MENU !!!!!!!!!!!!!!!!!*/
 
 /*!!!!!!!!!!!!!!!!!  FOOTER !!!!!!!!!!!!!!!!!*/
-.footer{
+.footer {
     background-color: var(--color-bg-header);
     box-shadow: 0 -2px 20px #9747FF;
     width: 100%;
     margin: 200px auto;
     transition: background-color 0.3s ease ;
 }
-.footer__container{
+.footer__container {
     padding: 20px 0;   
 }
-.social-links{
+.social-links {
     display: flex;
-    width: 100%;
-    margin: 0 -15px;
+    margin-left: -20px;
     justify-content: center;
 }
-
-.social-img{
+.social-img {
+    display: block;
     position: relative;
     z-index: 1;
     margin: 0 10px;
@@ -486,60 +508,58 @@ div:before {transform: rotate(-45deg);}
     width: 30px;
     transition: transform 0.2s ease;
 }
-.social-img img{
+.social-img img {
     width: 100%;
     height: 100%;
 }
-.social-img:hover{
+.social-img:hover {
     transform: translateY(-5px);
 }
 
-.footer-nav__row{
+.footer-nav__row {
     display: flex;
     width: 20%;
     margin: 20px auto;
     justify-content: space-between;
 }
-.footer-nav__item{
+.footer-nav__item {
     position: relative;
     font-family: "Montserrat";
     font-size: 20px;
+
+    &:before {
+        content:"";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 0;
+        border-top: 1px solid #C603D7;
+        transition: width 0.3s ease;
+    }
+    &:hover:before {
+        width: 100%;
+    }
 }
-.footer-nav__item:before{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 0;
-    border-top: 1px solid #C603D7;
-    content:"";
-    transition: width 0.3s ease;
-}
-.footer-nav__item:hover:before{
-    width: 100%;
-}
-.footer-copyright{
+.footer-copyright {
     width: 100%;
     text-align: center;
-    font-family: "Montserrat", sans-serif;
+    font-family: "Montserrat";
     font-weight: 400;
     font-size: 15px;
-    color: #c603d7;
 }
 /*!!!!!!!!!!!!!!!!!  /FOOTER  !!!!!!!!!!!!!!!!!*/
 
 /*!!!!!!!!!!!!!!!!!  SCROLL  !!!!!!!!!!!!!!!!!*/
+
 * {
     scroll-behavior: smooth;
   }
-
 body::-webkit-scrollbar {
     width: 6px;
 }
-
 body::-webkit-scrollbar-track {
     background-color: transparent;
 }
-
 body::-webkit-scrollbar-thumb {
     border-radius: 4px;
     background-color: #9747FF;
@@ -573,30 +593,28 @@ body::-webkit-scrollbar-thumb {
     height: 220px;
     background-color: var(--color-bg-header);
     border: 2px solid #C603D7;
-    border-radius: 0px;
     margin-right: 30px;
     z-index: 1;
     transition: background-color 0.3s ease, transform 0.3s ease;
-}
-.components__item:hover{
-    transform: scale(105%);
+
+    &:hover{
+        transform: scale(1.05);
+    }
 }
 .components__item img {
     margin-top: 20px;
     width: 100px;
-    height: 100px;
 }
 .components__item__videocard, .components__item__motherboard {
     transform: scale(1.5);
 }
 .components__item__motherboard {
-    transform: scale(1.2);
+    transform: scale(1.3);
 }
 .components__item p{
-    font-family: "Inter", sans-serif;
     font-size: 30px;
-    color: #9747FF;
     font-weight: 800;
     margin-top: 30px;
 }
+
 /*!!!!!!!!!!!!!!!!!  /COMPONENTS  !!!!!!!!!!!!!!!!!*/
