--- a/users/static/users/css/auth.css
+++ b/users/static/users/css/auth.css
@@ -1,5 +1,4 @@
 body {
-    background-color: #070010;
     overflow: hidden;
 }
 h1, h2, button, label, a {
@@ -25,12 +24,12 @@ h1 {
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus {
-  -webkit-text-fill-color: #ffffff;
-  transition: background-color 5000s ease-in-out 0s;
+    -webkit-text-fill-color: var(--color-text);
+    transition: background-color 5000s ease-in-out 0s;
 }
 
 .auth-main {
-    background-color: #0D0316;
+    background-color: var(--color-bg-header);
     max-width: 500px;
     height: 85%;
     border: 3px solid #8800FF;
@@ -78,7 +77,6 @@ input:-webkit-autofill:focus {
     background-color: #ffffff;
     border: 1px solid #0D0316;
     border-radius: 10px;
-
 }
 .auth-service img {
     width: 30px;
@@ -96,14 +94,15 @@ input:-webkit-autofill:focus {
     width: 100%;
     height: 35px;
     background-color: transparent;
-    color: #ffffff;
+    color: var(--color-text);
     font-size: 16px;
     padding-left: 5px;
     margin: 5px 0 20px 0;
     transition: box-shadow 0.2s ease-out;
-}
-.auth-input:focus {
-    box-shadow: 0 0 10px #8800FF, 0 0 5px #8800FF;
+    
+    &:focus {
+        box-shadow: 0 0 10px #8800FF, 0 0 5px #8800FF;
+    }
 }
 .non_field_errors ul li{
     color: #c70000;
